--- a/appveyor.yml
+++ b/appveyor.yml
@@ -27,7 +27,7 @@ before_build:
 build_script:
   # Generate a NuGet package version number.
   - echo %APPVEYOR_REPO_TAG%
-  - C:\Python34\python.exe CI\version-number.py %APPVEYOR_BUILD_VERSION% > pkg-version.txt
+  - C:\Python34\python.exe Tools\CI\version-number.py %APPVEYOR_BUILD_VERSION% > pkg-version.txt
   - set /p PKG_VERSION=<pkg-version.txt
   - echo %PKG_VERSION%
 
