Use 'clone_depth' not 'clone_script' in appveyor.yml

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -16,9 +16,7 @@ assembly_info:
   assembly_file_version: "{version}"
   assembly_informational_version: "{version}"
 
-clone_script:
-  - cmd: git clone -q --recursive --branch=%APPVEYOR_REPO_BRANCH% https://github.com/%APPVEYOR_REPO_NAME%.git %APPVEYOR_BUILD_FOLDER%
-  - cmd: git checkout -qf %APPVEYOR_REPO_COMMIT%
+clone_depth: 10
 
 before_build:
   # Install DocFX.
